public abstract class PizzaFactory {
    public abstract Pizza creerPizza(String type);
}
