public class PizzeriaBrest extends Pizzeria{
    public PizzeriaBrest() {
        super(new PizzaFactoryBrest());

    }



}
